# OpenGL-MMD

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OpenGL-MMD.sln  README.md
BoneModel/: BoneModel.vcxproj  BoneModel.vcxproj.filters  main.cpp
CompleteModel/: CompleteModel.vcxproj  CompleteModel.vcxproj.filters  main.cpp
LightModel/: LightModel.vcxproj  LightModel.vcxproj.filters  main.cpp  mmd.frag  mmd.vert
PMXLoader/: PMXLoader.vcxproj  main.cpp
StaticModel/: StaticModel.vcxproj  StaticModel.vcxproj.filters  TextureFragmentShader.fragmentshader  main.cpp
base/: MMDModel.cpp  MMDNode.cpp  MMDPhysics.cpp  PMDModel.cpp  PMXFile.cpp  PMXModel.cpp  VMDAnimation.cpp
common/: assimploader.cpp  assimploader.hpp  controls.cpp  texture.cpp  texture.hpp
libs/: Bullet3Common_Debug.lib  BulletInverseDynamics_Debug.lib  LinearMath_Debug.lib  gl3w.lib  glad.lib  glew32.lib  lodepng.lib
model/纳西妲普攻/: read me.txt
saba/: ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  saba.sln
saba/example/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  simple_mmd_viewer_dx11.vcxproj  simple_mmd_viewer_dx11.vcxproj.filters  simple_mmd_viewer_glfw.vcxproj  simple_mmd_viewer_glfw.vcxproj.filters
saba/src/: Saba.vcxproj  Saba.vcxproj.filters
shaders/: TextureFragmentShader.frag  TransformVertexShader.vert
